--- a/style.css
+++ b/style.css
@@ -1,6 +1,27 @@
+body{
+    height: 95vh;
+    width: 95;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+
 .jogo{
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 30px;
+    border: 10px solid black;
+}
+
+.titulo{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    background-color: black;
+    border: 10px solid black;
+    color: white;
 }
